--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-document-validation",
             "node_modules/@mongodb-js/compass-deployment-awareness",
-            "node_modules/@mongodb-js/compass-charts"
+            "node_modules/@mongodb-js/compass-charts",
+            "node_modules/@mongodb-js/compass-query-history"
           ],
           "styles": [
             "index"
@@ -144,6 +145,7 @@
     "@mongodb-js/compass-deployment-awareness": "3.2.0",
     "@mongodb-js/compass-document-validation": "4.1.0",
     "@mongodb-js/compass-serverstats": "9.1.0",
+    "@mongodb-js/compass-query-history": "0.0.4",
     "ampersand-collection": "^1.5.0",
     "ampersand-collection-filterable": "^0.2.1",
     "ampersand-dom-bindings": "^3.7.0",
