Add compass-crud external package

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
             "node_modules/@mongodb-js/compass-document-validation",
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-charts",
+            "node_modules/@mongodb-js/compass-crud",
             "node_modules/@mongodb-js/compass-query-history"
           ],
           "styles": [
@@ -54,21 +55,9 @@
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-document-validation",
             "node_modules/@mongodb-js/compass-deployment-awareness",
-            "node_modules/@mongodb-js/compass-charts"
-          ],
-          "styles": [
-            "index"
-          ]
-        },
-        "compass-charts": {
-          "name": "mongodb-compass-charts",
-          "productName": "MongoDB Compass Visualisations",
-          "plugins-directory": ".mongodb/compass-charts/plugins",
-          "packages": [
-            "node_modules/@mongodb-js/compass-serverstats",
-            "node_modules/@mongodb-js/compass-document-validation",
-            "node_modules/@mongodb-js/compass-deployment-awareness",
-            "node_modules/@mongodb-js/compass-charts"
+            "node_modules/@mongodb-js/compass-charts",
+            "node_modules/@mongodb-js/compass-crud",
+            "node_modules/@mongodb-js/compass-query-history"
           ],
           "styles": [
             "index"
@@ -142,6 +131,7 @@
   },
   "dependencies": {
     "@mongodb-js/compass-charts": "^0.2.3",
+    "@mongodb-js/compass-crud": "0.0.1",
     "@mongodb-js/compass-deployment-awareness": "3.2.0",
     "@mongodb-js/compass-document-validation": "4.1.0",
     "@mongodb-js/compass-serverstats": "9.1.1",
