COMPASS-1101: Use CRUD from External Package (#1190)
* COMPASS-1101: Removing CRUD plugin

* Add compass-crud external package

* Remove crud styles

* COMPASS-1101: Use CRUD from external package

* Remove editable document crud test

* Remove crud store renderer test

* Remove crud commands

* Bring back documents tab spectron commands

* COMPASS-1677: Fixing key/value focus on tab

--- a/package.json
+++ b/package.json
@@ -39,20 +39,8 @@
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-document-validation",
             "node_modules/@mongodb-js/compass-deployment-awareness",
+            "node_modules/@mongodb-js/compass-crud",
             "node_modules/@mongodb-js/compass-query-history"
-          ],
-          "styles": [
-            "index"
-          ]
-        },
-        "compass-enterprise": {
-          "name": "mongodb-compass-enterprise",
-          "productName": "MongoDB Compass Enterprise",
-          "plugins-directory": ".mongodb/compass-enterprise/plugins",
-          "packages": [
-            "node_modules/@mongodb-js/compass-serverstats",
-            "node_modules/@mongodb-js/compass-document-validation",
-            "node_modules/@mongodb-js/compass-deployment-awareness"
           ],
           "styles": [
             "index"
@@ -125,6 +113,7 @@
     "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
+    "@mongodb-js/compass-crud": "0.0.5",
     "@mongodb-js/compass-deployment-awareness": "3.2.0",
     "@mongodb-js/compass-document-validation": "4.1.0",
     "@mongodb-js/compass-serverstats": "9.1.1",
