--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
           "packages": [
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-document-validation",
-            "node_modules/@mongodb-js/compass-deployment-awareness",
-            "node_modules/@mongodb-js/compass-crud"
+            "node_modules/@mongodb-js/compass-deployment-awareness"
           ],
           "styles": [
             "index"
@@ -114,7 +113,6 @@
   "dependencies": {
     "@mongodb-js/compass-deployment-awareness": "3.0.0",
     "@mongodb-js/compass-document-validation": "4.0.3",
-    "@mongodb-js/compass-crud": "0.0.5",
     "@mongodb-js/compass-serverstats": "9.1.1",
     "ampersand-collection": "^1.5.0",
     "ampersand-collection-filterable": "^0.2.1",
