add libsecret-1-0 to travis config (#1237)

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - libkrb5-dev
+      - libsecret-1-0
 before_install:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> .npmrc
   - npm i -g npm@5
