--- a/package.json
+++ b/package.json
@@ -136,7 +136,7 @@
     "@mongodb-js/compass-crud": "0.6.0",
     "@mongodb-js/compass-deployment-awareness": "3.2.0",
     "@mongodb-js/compass-document-validation": "4.1.0",
-    "@mongodb-js/compass-query-history": "1.0.0",
+    "@mongodb-js/compass-query-history": "^1.0.1",
     "@mongodb-js/compass-serverstats": "9.1.1",
     "@mongodb-js/compass-status": "1.0.0",
     "ampersand-collection": "^1.5.0",
