--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ addons:
       - libsecret-1-0
 before_install:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> .npmrc
+  - npm i -g npm@5
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
