--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ addons:
 before_install:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> .npmrc
   - npm i -g npm@5
+  - npm --version
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
