:arrow_up: chai-enzyme@0.8.0, replace react-addons-test-utils with react-test-renderer
When running `npm test -- --enzyme`, fixes the following warnings:
Warning: ReactTestUtils has been moved to react-dom/test-utils. Update references to remove this warning.
Warning: Shallow renderer has been moved to react-test-renderer/shallow. Update references to remove this warning.

--- a/package.json
+++ b/package.json
@@ -240,11 +240,11 @@
     "babel-register": "^6.23.0",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.1.0",
-    "chai-enzyme": "^0.5.2",
+    "chai-enzyme": "^0.8.0",
     "devtron": "^1.4.0",
+    "electron": "1.6.1",
     "electron-devtools-installer": "^2.1.0",
     "electron-mocha": "^3.3.0",
-    "electron": "1.6.1",
     "enzyme": "^2.5.1",
     "eslint-config-mongodb-js": "^2.2.0",
     "hadron-build": "^14.0.0",
@@ -255,7 +255,7 @@
     "mock-require": "^2.0.1",
     "mongodb-js-precommit": "^0.3.0",
     "mongodb-runner": "^3.6.1",
-    "react-addons-test-utils": "^15.2.1",
+    "react-test-renderer": "^15.6.1",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "xvfb-maybe": "^0.1.3"
