[Backport 1.8] COMPASS-1217 bump runner and remove .travis.yml hack (#1242)
* :arrow_up: mongodb-runner@3.6.1

* :yay: Remove hack to workaround Travis caches issues

* :arrow_up: npm@5

* :pushpin: react-select@1.0.0-rc.5

Indexes Tab does not even appear with react-select@1.0.0-rc6:
https://github.com/JedWatson/react-select/blob/master/HISTORY.md#v100-rc6--2017-09-10

* Sanity check npm 5 is installed at least once

* :arrow_up: chai-enzyme@0.8.0, replace react-addons-test-utils with react-test-renderer

When running `npm test -- --enzyme`, fixes the following warnings:
Warning: ReactTestUtils has been moved to react-dom/test-utils. Update references to remove this warning.
Warning: Shallow renderer has been moved to react-test-renderer/shallow. Update references to remove this warning.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,13 +17,12 @@ addons:
       - libkrb5-dev
 before_install:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> .npmrc
+  - npm i -g npm@5
+  - npm --version
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - npm run check
-  - mkdir -p /home/travis/build/10gen/compass/node_modules/mongodb-version-manager/.mongodb/downloads/
-  - wget -P /home/travis/build/10gen/compass/node_modules/mongodb-version-manager/.mongodb/downloads/ http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-2.6.12.tgz
-  - wget -P /home/travis/build/10gen/compass/node_modules/mongodb-version-manager/.mongodb/downloads/ http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-3.4.8.tgz
 script: npm run test
 cache:
   directories:
