[Backport 1.8] COMPASS-1217 bump runner and remove .travis.yml hack (#1244)
* [Backport 1.8] COMPASS-1217 bump runner and remove .travis.yml hack (#1242)

* :arrow_up: mongodb-runner@3.6.1

* :yay: Remove hack to workaround Travis caches issues

* :arrow_up: npm@5

* :pushpin: react-select@1.0.0-rc.5

Indexes Tab does not even appear with react-select@1.0.0-rc6:
https://github.com/JedWatson/react-select/blob/master/HISTORY.md#v100-rc6--2017-09-10

* Sanity check npm 5 is installed at least once

* :arrow_up: chai-enzyme@0.8.0, replace react-addons-test-utils with react-test-renderer

When running `npm test -- --enzyme`, fixes the following warnings:
Warning: ReactTestUtils has been moved to react-dom/test-utils. Update references to remove this warning.
Warning: Shallow renderer has been moved to react-test-renderer/shallow. Update references to remove this warning.

* Go back to npm@4

* add libsecret-1-0 to travis config (#1237)

* :bug: Resolve incorrectly resolved merge conflict

See 67e655e74705ac7eda78d8bceb46b82d671b8f13

--- a/package.json
+++ b/package.json
@@ -192,7 +192,7 @@
     "react-dom": "^15.5.4",
     "react-fontawesome": "^1.6.1",
     "react-native-listener": "1.0.1",
-    "react-select": "^1.0.0-rc.3",
+    "react-select": "1.0.0-rc.5",
     "react-tooltip": "^3.2.6",
     "react-vega": "^3.0.1",
     "react-vega-lite": "^1.0.1",
@@ -214,11 +214,11 @@
     "babel-register": "^6.23.0",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.1.0",
-    "chai-enzyme": "^0.5.2",
+    "chai-enzyme": "^0.8.0",
     "devtron": "^1.4.0",
+    "electron": "1.6.1",
     "electron-devtools-installer": "^2.1.0",
     "electron-mocha": "^3.3.0",
-    "electron": "1.6.1",
     "enzyme": "^2.5.1",
     "eslint-config-mongodb-js": "^2.2.0",
     "hadron-build": "^14.0.0",
@@ -228,8 +228,8 @@
     "mocha": "^3.1.2",
     "mock-require": "^2.0.1",
     "mongodb-js-precommit": "^0.3.0",
-    "mongodb-runner": "^3.5.0",
-    "react-addons-test-utils": "^15.2.1",
+    "mongodb-runner": "^3.6.1",
+    "react-test-renderer": "^15.6.1",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "xvfb-maybe": "^0.1.3"
