--- a/package.json
+++ b/package.json
@@ -127,8 +127,8 @@
   "dependencies": {
     "@mongodb-js/compass-deployment-awareness": "3.2.0",
     "@mongodb-js/compass-document-validation": "4.1.0",
+    "@mongodb-js/compass-query-history": "^1.0.1",
     "@mongodb-js/compass-serverstats": "9.1.1",
-    "@mongodb-js/compass-query-history": "0.3.0",
     "ampersand-collection": "^1.5.0",
     "ampersand-collection-filterable": "^0.2.1",
     "ampersand-dom-bindings": "^3.7.0",
@@ -146,7 +146,7 @@
     "async": "^1.5.2",
     "backoff": "^2.4.1",
     "bootstrap": "https://github.com/twbs/bootstrap/archive/v3.3.5.tar.gz",
-    "codemirror-mongodb": "^0.9.1",
+    "codemirror-mongodb": "^0.10.0",
     "create-react-class": "^15.5.2",
     "d3": "^3.5.6",
     "d3-flextree": "^1.0.3",
@@ -191,7 +191,7 @@
     "mongodb-js-metrics": "^1.6.0",
     "mongodb-language-model": "^1.2.0",
     "mongodb-ns": "^2.0.0",
-    "mongodb-query-parser": "^0.7.1",
+    "mongodb-query-parser": "^1.0.1",
     "mongodb-schema": "^7.0.0",
     "mongodb-shell-to-url": "^0.1.0",
     "ms": "^0.7.1",
