--- a/package.json
+++ b/package.json
@@ -130,8 +130,8 @@
     "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-charts": "^0.2.3",
-    "@mongodb-js/compass-crud": "0.6.0",
+    "@mongodb-js/compass-charts": "^0.5.0",
+    "@mongodb-js/compass-crud": "^0.7.0",
     "@mongodb-js/compass-deployment-awareness": "^4.0.0",
     "@mongodb-js/compass-document-validation": "^5.0.0",
     "@mongodb-js/compass-query-history": "^2.0.0",
