--- a/package.json
+++ b/package.json
@@ -130,13 +130,13 @@
     "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-charts": "^0.2.3",
-    "@mongodb-js/compass-crud": "0.6.0",
-    "@mongodb-js/compass-deployment-awareness": "3.2.0",
-    "@mongodb-js/compass-document-validation": "4.1.0",
-    "@mongodb-js/compass-query-history": "^1.0.1",
-    "@mongodb-js/compass-serverstats": "9.1.1",
-    "@mongodb-js/compass-status": "1.0.0",
+    "@mongodb-js/compass-charts": "^0.5.0",
+    "@mongodb-js/compass-crud": "^0.7.1",
+    "@mongodb-js/compass-deployment-awareness": "^4.0.0",
+    "@mongodb-js/compass-document-validation": "^5.0.0",
+    "@mongodb-js/compass-query-history": "^2.0.1",
+    "@mongodb-js/compass-serverstats": "^10.0.0",
+    "@mongodb-js/compass-status": "^2.0.0",
     "ampersand-collection": "^1.5.0",
     "ampersand-collection-filterable": "^0.2.1",
     "ampersand-dom-bindings": "^3.7.0",
@@ -165,8 +165,8 @@
     "electron-squirrel-startup": "^1.0.0",
     "font-awesome": "^4.7.0",
     "get-object-path": "azer/get-object-path#74eb42de0cfd02c14ffdd18552f295aba723d394",
-    "hadron-app": "^1.0.0",
-    "hadron-app-registry": "^6.0.0",
+    "hadron-app": "^2.0.0",
+    "hadron-app-registry": "^7.0.0",
     "hadron-auto-update-manager": "^0.0.12",
     "hadron-compile-cache": "^1.0.1",
     "hadron-ipc": "^0.0.7",
@@ -188,8 +188,8 @@
     "marky": "^1.2.0",
     "moment": "^2.10.6",
     "mongodb-collection-model": "^0.4.0",
-    "mongodb-connection-model": "^9.0.0",
-    "mongodb-data-service": "^7.0.0",
+    "mongodb-connection-model": "^10.1.2",
+    "mongodb-data-service": "^8.0.0",
     "mongodb-database-model": "^0.1.2",
     "mongodb-explain-plan-model": "^0.2.2",
     "mongodb-extended-json": "^1.10.0",
