*ix builds failing trying to symlink non existant node-pre-gyp

--- a/package.json
+++ b/package.json
@@ -179,6 +179,7 @@
     "mongodb-shell-to-url": "^0.1.0",
     "ms": "^0.7.1",
     "node-notifier": "^4.3.1",
+    "node-pre-gyp": "^0.6.38",
     "numeral": "^1.5.3",
     "pluralize": "^1.2.1",
     "prop-types": "^15.5.8",
