--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
             "node_modules/@mongodb-js/compass-document-validation",
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-query-history",
+            "node_modules/@mongodb-js/compass-security",
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-status"
           ],
@@ -62,6 +63,7 @@
             "node_modules/@mongodb-js/compass-crud",
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-query-history",
+            "node_modules/@mongodb-js/compass-security",
             "node_modules/@mongodb-js/compass-status"
           ],
           "styles": [
@@ -144,6 +146,7 @@
     "@mongodb-js/compass-deployment-awareness": "^5.0.0",
     "@mongodb-js/compass-document-validation": "^5.0.0",
     "@mongodb-js/compass-query-history": "^2.0.1",
+    "@mongodb-js/compass-security": "^0.0.2",
     "@mongodb-js/compass-serverstats": "^10.0.0",
     "@mongodb-js/compass-status": "^2.0.0",
     "ampersand-collection": "^1.5.0",
