--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
             "node_modules/@mongodb-js/compass-connect",
             "node_modules/@mongodb-js/compass-crud",
             "node_modules/@mongodb-js/compass-deployment-awareness",
+            "node_modules/@mongodb-js/compass-license",
             "node_modules/@mongodb-js/compass-query-history",
             "node_modules/@mongodb-js/compass-security",
             "node_modules/@mongodb-js/compass-status"
@@ -145,6 +146,7 @@
     "@mongodb-js/compass-crud": "^0.7.1",
     "@mongodb-js/compass-deployment-awareness": "^5.0.0",
     "@mongodb-js/compass-document-validation": "^5.0.0",
+    "@mongodb-js/compass-license": "^1.0.0",
     "@mongodb-js/compass-query-history": "^2.0.1",
     "@mongodb-js/compass-security": "^0.0.2",
     "@mongodb-js/compass-serverstats": "^10.0.0",
