--- a/src/internal-plugins/indexes/package.json
+++ b/src/internal-plugins/indexes/package.json
@@ -2,7 +2,8 @@
   "name": "indexes",
   "productName": "Compass Indexes Support",
   "description": "Indexes support for Compass as an internal package.",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "apiVersion": "1.0.0",
   "authors": "MongoDB Inc.",
   "private": true,
   "main": "./index.js"
