--- a/src/internal-plugins/collection-stats/package.json
+++ b/src/internal-plugins/collection-stats/package.json
@@ -2,7 +2,8 @@
   "name": "collection-stats",
   "productName": "Compass Collection Stats",
   "description": "Collection Stats in the Collection View",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "apiVersion": "1.0.0",
   "authors": "MongoDB Inc.",
   "private": true,
   "main": "./index.js"
