--- a/src/internal-plugins/database-ddl/package.json
+++ b/src/internal-plugins/database-ddl/package.json
@@ -2,7 +2,8 @@
   "name": "database-ddl",
   "productName": "Compass DDL PLugin",
   "description": "Database-level Data Definition Language (DDL) operations for Compass",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "apiVersion": "1.0.0",
   "authors": "MongoDB Inc.",
   "private": true,
   "main": "./index.js"
