--- a/src/internal-plugins/home/package.json
+++ b/src/internal-plugins/home/package.json
@@ -2,7 +2,8 @@
   "name": "home",
   "productName": "Compass Home",
   "description": "Home view for Compass as an internal package.",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "apiVersion": "1.0.0",
   "authors": "MongoDB Inc.",
   "private": true,
   "main": "./index.js"
