--- a/src/internal-plugins/instance/package.json
+++ b/src/internal-plugins/instance/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "home",
-  "productName": "Compass Instance",
-  "description": "Instance view for Compass as an internal package.",
-  "version": "0.0.1",
+  "name": "instance",
+  "productName": "Compass Instance Plugin",
+  "description": "Instance View Plugin for Compass",
+  "version": "1.0.0",
+  "apiVersion": "1.0.0",
   "authors": "MongoDB Inc.",
   "private": true,
   "main": "./index.js"
