--- a/src/internal-plugins/metrics/package.json
+++ b/src/internal-plugins/metrics/package.json
@@ -2,7 +2,8 @@
   "name": "metrics",
   "productName": "Compass Metrics",
   "description": "Anonymous Usage Statistics in Compass",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "apiVersion": "1.0.0",
   "authors": "MongoDB Inc.",
   "private": true,
   "main": "./index.js"
