--- a/src/internal-plugins/server-version/package.json
+++ b/src/internal-plugins/server-version/package.json
@@ -1,7 +1,8 @@
 {
   "name": "compass-server-version",
   "productName": "Compass Server Version",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "apiVersion": "1.0.0",
   "authors": "MongoDB Inc.",
   "description": "Renders the server version and distro as a header item",
   "private": true,
