Rename instance plugin to home

--- a/src/internal-plugins/instance/package.json
+++ b/src/internal-plugins/instance/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "home",
+  "name": "instance",
   "productName": "Compass Instance",
   "description": "Instance view for Compass as an internal package.",
   "version": "0.0.1",
