--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
             "node_modules/@mongodb-js/compass-query-history",
             "node_modules/@mongodb-js/compass-security",
             "node_modules/@mongodb-js/compass-serverstats",
+            "node_modules/@mongodb-js/compass-server-version",
             "node_modules/@mongodb-js/compass-status"
           ],
           "styles": [
@@ -66,6 +67,7 @@
             "node_modules/@mongodb-js/compass-license",
             "node_modules/@mongodb-js/compass-query-history",
             "node_modules/@mongodb-js/compass-security",
+            "node_modules/@mongodb-js/compass-server-version",
             "node_modules/@mongodb-js/compass-status"
           ],
           "styles": [
@@ -149,6 +151,7 @@
     "@mongodb-js/compass-query-history": "^2.0.1",
     "@mongodb-js/compass-security": "^0.0.3",
     "@mongodb-js/compass-serverstats": "^10.0.0",
+    "@mongodb-js/compass-server-version": "^1.0.0",
     "@mongodb-js/compass-status": "^2.0.0",
     "ampersand-collection": "^1.5.0",
     "ampersand-collection-filterable": "^0.2.1",
