--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
           "bundleId": "com.mongodb.compass",
           "plugins-directory": ".mongodb/compass/plugins",
           "plugins": [
+            "node_modules/@mongodb-js/compass-crud",
+            "node_modules/@mongodb-js/compass-collection-stats",
+            "node_modules/@mongodb-js/compass-connect",
             "node_modules/@mongodb-js/compass-auth-kerberos",
             "node_modules/@mongodb-js/compass-auth-ldap",
             "node_modules/@mongodb-js/compass-auth-x509",
-            "node_modules/@mongodb-js/compass-crud",
-            "node_modules/@mongodb-js/compass-connect",
             "node_modules/@mongodb-js/compass-document-validation",
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-query-history",
@@ -62,6 +63,7 @@
           "bundleId": "com.mongodb.compass-community",
           "plugins-directory": ".mongodb/compass-community/plugins",
           "plugins": [
+            "node_modules/@mongodb-js/compass-collection-stats",
             "node_modules/@mongodb-js/compass-connect",
             "node_modules/@mongodb-js/compass-crud",
             "node_modules/@mongodb-js/compass-deployment-awareness",
@@ -145,6 +147,7 @@
     "@mongodb-js/compass-auth-kerberos": "^0.0.2",
     "@mongodb-js/compass-auth-ldap": "^0.0.2",
     "@mongodb-js/compass-auth-x509": "^0.0.3",
+    "@mongodb-js/compass-collection-stats": "^1.0.1",
     "@mongodb-js/compass-connect": "^0.1.2",
     "@mongodb-js/compass-crud": "^0.10.0",
     "@mongodb-js/compass-deployment-awareness": "^5.0.0",
