Pin plugin versions

--- a/package.json
+++ b/package.json
@@ -137,18 +137,18 @@
     "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-auth-kerberos": "^0.0.2",
-    "@mongodb-js/compass-auth-ldap": "^0.0.2",
-    "@mongodb-js/compass-auth-x509": "^0.0.3",
-    "@mongodb-js/compass-connect": "^0.1.0",
+    "@mongodb-js/compass-auth-kerberos": "0.0.2",
+    "@mongodb-js/compass-auth-ldap": "0.0.2",
+    "@mongodb-js/compass-auth-x509": "0.0.3",
+    "@mongodb-js/compass-connect": "0.1.2",
     "@mongodb-js/compass-crud": "0.7.5",
-    "@mongodb-js/compass-deployment-awareness": "^5.0.0",
-    "@mongodb-js/compass-document-validation": "^5.0.0",
-    "@mongodb-js/compass-license": "^0.0.2",
-    "@mongodb-js/compass-query-history": "^2.0.1",
-    "@mongodb-js/compass-security": "^0.0.2",
-    "@mongodb-js/compass-serverstats": "^10.0.0",
-    "@mongodb-js/compass-status": "^2.0.0",
+    "@mongodb-js/compass-deployment-awareness": "5.0.0",
+    "@mongodb-js/compass-document-validation": "5.0.0",
+    "@mongodb-js/compass-license": "0.0.2",
+    "@mongodb-js/compass-query-history": "2.0.1",
+    "@mongodb-js/compass-security": "0.0.3",
+    "@mongodb-js/compass-serverstats": "10.0.0",
+    "@mongodb-js/compass-status": "2.0.0",
     "ampersand-collection": "^1.5.0",
     "ampersand-collection-filterable": "^0.2.1",
     "ampersand-dom-bindings": "^3.7.0",
