Change the releases name on remote upload

--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -159,7 +159,7 @@ functions:
         aws_key: ${aws_key}
         aws_secret: ${aws_secret}
         local_file: src/dist/RELEASES
-        remote_file: ${project}/${revision}/RELEASES
+        remote_file: ${project}/${revision}/${compass_distribution}-RELEASES
         bucket: mciuploads
         permissions: public-read
         content_type: application/octet-stream
